fixed minor alignment issue with asside in users page

--- a/styles.css
+++ b/styles.css
@@ -374,6 +374,7 @@ so it lines up under aside perfectly. Set height to match siblings.*/
 }
 
 .body {
+		width: 650px;
     display: flex;
     flex-direction: column;
 }
